# ManhwaUpdatesBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Changelog.md  Dockerfile  LICENSE  README.md  RELEASE.md  TODO.md  _test.py  config.example.toml  config.yml.example  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test.py  todo.txt
.discord/: privacy.md  terms.md
.github/: FUNDING.yml  supportedWebsites.md
.idx/: dev.nix
docs/: deployment.md  geo-seo-copy.md  premium.md  reverse-proxy.md
plans/: README.md  phase-03-db-layer.md  phase-04-bot-skeleton.md  phase-05-premium.md  phase-06-catalog-cog.md  phase-07-tracking-cog.md  phase-08-subscriptions-cog.md  phase-09-bookmarks-cog.md  phase-10-settings-cog.md  phase-11-updates-cog.md  phase-12-general-cog.md  phase-13-dev-cog.md  phase-14-docs-and-ci.md  phase-15-verification.md
src/: __init__.py  cache.py  enums.py  html_json_parser.py  objects.py  overwrites.py  scanners.py  static.py  utils.py  views.py
tests/: __main__.py  conftest.py  sample_lost_manga.md  schema.json  scrap.py  test.py  test2.py  test_autocomplete.py  test_autocomplete_wiring.py  test_beta.py  test_bookmark_auto_subscribe.py  test_bookmark_chapter_lines.py  test_bookmark_folder_transformer.py  test_bookmark_member_resolution.py  test_bookmark_nav.py  test_bookmark_progress.py  test_bookmark_view_parity.py  test_bot_skeleton.py  test_catalog_progress.py  test_catalog_search_timeout.py  test_chapter_dataclass.py  test_chapter_display.py  test_chapter_update_buttons.py  test_checks_permissions.py  (+48 more)
(+170 files in other folders)
