[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manhwa_bot"
version = "2.0.0"
description = "Thin Discord bot that delegates manga scraping to a crawler service"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "MooshiMochi" }]
dependencies = [
    "discord.py>=2.4,<3",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/manhwa_bot"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
